# Synthia

./: .gitattributes  .gitignore  README.md  pyproject.toml
initial_setup/: setup.txt
src/synthia/notebooks/: data_preparation.ipynb  data_understanding.ipynb  documents.pkl  moa_pdf_ingestion.ipynb  nebulagraph.html  query_engine_modelling.ipynb  scraper.ipynb  synthia_knowledge_graph_extraction_v0.ipynb
src/synthia/notebooks/data/: formatted_train_val_test.jsonl  llm1_finetuning_dataset_v2.jsonl  moa_metadata.csv  synthia_knowledge_graph_dataset.jsonl  synthia_knowledge_graph_dataset_final.jsonl  synthia_knowledge_graph_dataset_test.jsonl  synthia_knowledge_graph_dataset_train.jsonl  synthia_knowledge_graph_dataset_v1.jsonl  synthia_knowledge_graph_dataset_v2.jsonl  synthia_knowledge_graph_dataset_val.jsonl  train_val_test.jsonl  val_test_dataset.jsonl
src/synthia/notebooks/data/storage_graph/: docstore.json  index_store.json
