[tool.poetry]
name = "synthia-anaconda"
version = "0.1.0"
description = "Generative AI Chatbot for the City of San Jose"
authors = ["Koushik Modekurti <koushik.modekurti@sjsu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.23.1"
openai = "^0.27.8"
streamlit-chat = "^0.0.2.2"
python-dotenv = "^1.0.0"
langchain = "^0.0.262"
pypdf = "^3.9.1"
tiktoken = "^0.4.0"
faiss-cpu = "^1.7.4"
pinecone-client = "^2.2.2"
openpyxl = "^3.1.2"
requests = "^2.31.0"
jupyter = "^1.0.0"
unstructured = {extras = ["pdf"], version = "^0.10.30"}
networkx = "^3.2.1"
tqdm = "^4.66.1"
ipython-ngql = "^0.7.5"
llama-index = "0.8.9"
pyvis = "^0.3.2"
pypdf2 = "^3.0.1"
scikit-learn = "^1.3.2"
sns = "^0.1"
seaborn = "^0.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ipykernel = "^6.23.1"
watchdog = "^3.0.0"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
